# veda-rs

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-MIT  README.md  USAGE.md  prompt.md
.github/: dependabot.yml
benches/: adaptive_overhead.rs  rayon_comparison.rs  sequential_comparison.rs
docs/: brief.md
examples/: adaptive_workload.rs  async_parallel.rs  basic_par_iter.rs  comprehensive_demo.rs  custom_priorities.rs  deterministic_debug.rs  gpu_compute.rs  scoped_parallelism.rs
src/: config.rs  error.rs  lib.rs  prelude.rs  runtime.rs  runtime_manager.rs
src/async_bridge/: executor_bridge.rs  mod.rs  par_stream.rs  spawn.rs  waker.rs
src/executor/: cpu_pool.rs  mod.rs  panic_handler.rs  task.rs  worker.rs
src/gpu/: buffer.rs  kernel.rs  mod.rs  runtime.rs  scheduler.rs
src/iter/: advanced_combinators.rs  chunks.rs  combinator_impl_macro.rs  mod.rs  par_iter.rs
src/memory/: allocator.rs  arena.rs  mod.rs  numa.rs  thread_local.rs
src/scheduler/: adaptive.rs  coordinator.rs  deterministic.rs  energy.rs  mod.rs  priority.rs  work_stealing.rs
src/scope/: mod.rs  scope.rs
src/telemetry/: export.rs  feedback.rs  metrics.rs  mod.rs  tracing.rs
src/util/: atomic.rs  backoff.rs  backpressure.rs  cache_padded.rs  mod.rs
tests/: integration_test.rs  stress_test.rs
tests/integration/: mod.rs  rayon_compat.rs
tests/stress/: mod.rs  scalability.rs
